Fixed .gitignore settings being wrong, not including the libraries on GitHub, made it so Scenes reset after Game Over

--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,6 @@
 *.userprefs
 
 # Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
 bld/
 [Bb]in/
 [Oo]bj/
@@ -262,3 +256,4 @@ __pycache__/
 
 # Specific
 _Build/
+_Temp/
