--- a/DigDug/DigDug.vcxproj.filters
+++ b/DigDug/DigDug.vcxproj.filters
@@ -48,13 +48,13 @@
     <ClInclude Include="GameOverScene.h">
       <Filter>Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="FygarStates.h">
-      <Filter>Characters</Filter>
-    </ClInclude>
     <ClInclude Include="DigDugStates.h">
       <Filter>Characters</Filter>
     </ClInclude>
     <ClInclude Include="EnemyComponent.h">
+      <Filter>Characters</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyStates.h">
       <Filter>Characters</Filter>
     </ClInclude>
   </ItemGroup>
@@ -89,13 +89,13 @@
     <ClCompile Include="GameOverScene.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="FygarStates.cpp">
-      <Filter>Characters</Filter>
-    </ClCompile>
     <ClCompile Include="DigDugStates.cpp">
       <Filter>Characters</Filter>
     </ClCompile>
     <ClCompile Include="EnemyComponent.cpp">
+      <Filter>Characters</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyStates.cpp">
       <Filter>Characters</Filter>
     </ClCompile>
   </ItemGroup>
