--- a/DigDug/DigDug.vcxproj
+++ b/DigDug/DigDug.vcxproj
@@ -196,9 +196,11 @@
     <ClInclude Include="GameOverScene.h" />
     <ClInclude Include="HealthDisplay.h" />
     <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="PlayerComponent.h" />
     <ClInclude Include="Prefabs.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RockStates.h" />
+    <ClInclude Include="Settings.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Characters.cpp" />
@@ -210,6 +212,7 @@
     <ClCompile Include="GameOverScene.cpp" />
     <ClCompile Include="HealthDisplay.cpp" />
     <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="PlayerComponent.cpp" />
     <ClCompile Include="Prefabs.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
