--- a/DigDug/DigDug.vcxproj.filters
+++ b/DigDug/DigDug.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClInclude Include="EnemyStates.h">
       <Filter>Characters</Filter>
     </ClInclude>
+    <ClInclude Include="PlayerComponent.h">
+      <Filter>Characters</Filter>
+    </ClInclude>
+    <ClInclude Include="Settings.h">
+      <Filter>Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -96,6 +102,9 @@
       <Filter>Characters</Filter>
     </ClCompile>
     <ClCompile Include="EnemyStates.cpp">
+      <Filter>Characters</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerComponent.cpp">
       <Filter>Characters</Filter>
     </ClCompile>
   </ItemGroup>
